2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Update gtk# dependency.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor.csproj: Updated dependencies. We now
	  depend on gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor/XmlEditorService.cs:
	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Track api
	  changes.

2009-07-30  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor/XmlFormatter.cs: Don't crash when
	  trying to format malformed xml.

2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor/XmlFormatter.cs:
	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Use the new
	  DesktopService instead of PlatformService.

2009-06-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.XmlEditor.csproj:
	* MonoDevelop.XmlEditor.addin.xml:
	* MonoDevelop.XmlEditor/XmlFormatter.cs: Implemented a simple
	  XML formatter.

2009-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs: Fix
	  build.

2009-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs:
	  Newlines are technically valid in attribute values. Only
	  emit a warning, not an error.

2009-05-05  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs: Improve
	  an error message.

2009-05-01  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs: Break
	  on newlines. Better error reporting.

	* MonoDevelop.Xml.StateEngine/XmlTagState.cs: Better error
	  reporting.

2009-04-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor/DeclarationViewWindow.cs: Updated
	  declaration view from MonoDevelop.Projects.Gui

2009-04-17  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.XmlEditor.csproj: don't require specific