@@ -1,3 +1,9 @@
+2009-09-09  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
+	  Implemented 'Bug 537682 - It would be great if I could just
+	  type bar '/' to close any tag as <foo />...'.
+
 2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* gtk-gui/gui.stetic: Update gtk# dependency.
